--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3'
 services:
   web:
     build: site
-    ports :
-     - "80:80"
+    ports:
+      - "80:80"
     volumes:
-     - ./www:/var/www/html/
-     - ./server/000-default.conf:/etc/apache2/sites-available/000-default.conf
-     - ./server/apache2.conf:/etc/apache2/apache2.conf
-     - ./server/php.ini:/usr/local/etc/php/php.ini
+      - ./www:/var/www/html/
+      - ./server/000-default.conf:/etc/apache2/sites-available/000-default.conf
+      - ./server/apache2.conf:/etc/apache2/apache2.conf
+      - ./server/php.ini:/usr/local/etc/php/php.ini
+    depends_on:
+      - mariadb
 
   mariadb:
     image: mariadb
@@ -22,17 +24,18 @@ services:
       - "3306:3306"
     volumes:
       - mariadb_data:/var/lib/mysql
+      - ./database/database.sql:/docker-entrypoint-initdb.d/database.sql  # Migration SQL
 
   phpmyadmin:
     image: phpmyadmin
     restart: always
     environment:
-      PMA_ARBITRARY: 1
       PMA_HOST: mariadb
-      PMA_USER: esgi
-      PMA_PASSWORD: esgipwd
+      MYSQL_ROOT_PASSWORD: esgipwd
     ports:
       - "8080:80"
+    depends_on:
+      - mariadb
 
 volumes:
   mariadb_data:
